# slicer-timeline

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md
DeepArcTimeline/: CMakeLists.txt  DeepArcTimeline.py  pyproject.toml
DeepArcTimeline/Resources/UI/: DeepArcTimeline.ui
